third_party/move/move-compiler-v2/tests/more-v1/parser/invalid_character_non_ascii.exp

Diagnostics:
error: invalid character
  ┌─ tests/more-v1/parser/invalid_character_non_ascii.move:5:4
  │
5 │    ф
  │    ^ Invalid character: `ф`
